--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,10 @@ version: "3.8"
 
 services:
   comfyui:
-    image: timpietruskyblibla/runpod-worker-comfy:latest
+    build: ./
+    image: yuwenbao/runpod-worker-comfy:test 
     container_name: comfyui-worker
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - SERVE_API_LOCALLY=true
-    ports:
-      - "8000:8000"
     runtime: nvidia
-    volumes:
-      - ./data/comfyui/output:/comfyui/output
