Docker分级镜像，并修复缺库缺包错误

--- a/Dockerfile_bak
+++ b/Dockerfile_bak
@@ -1,41 +1,49 @@
 # Use Nvidia CUDA base image
-FROM yuwenbao/runpod-worker-comfy:base as base
+FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04 as base
 
+# Prevents prompts from packages asking for user input during installation
+ENV DEBIAN_FRONTEND=noninteractive
+# Prefer binary wheels over source distributions for faster pip installations
+ENV PIP_PREFER_BINARY=1
+# Ensures output from python is printed immediately to the terminal without buffering
+ENV PYTHONUNBUFFERED=1 
 
-ARG TIMESTAMP=$${TIMESTAMP:-$(date +%Y%m%d%H%M%S)}
-ENV TIMESTAMP=${TIMESTAMP}
-
-# Install other necessary dependencies
+# Install Python, git and other necessary tools
 RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
-    libglx0 \
-    libegl1 \
-    libxext6 \
-    libx11-6 \
-    libglib2.0-0 && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+    python3.10 \
+    python3-pip \
+    git \
+    wget
 
+# Clean up to reduce image size
+RUN apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+
+# Clone ComfyUI repository
+RUN git clone https://github.com/comfyanonymous/ComfyUI.git /comfyui
+RUN git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale /comfyui/custom_nodes/ComfyUI_UltimateSDUpscale
+RUN git clone https://github.com/jags111/efficiency-nodes-comfyui /comfyui/custom_nodes/efficiency-nodes-comfyui
+RUN git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes /comfyui/custom_nodes/ComfyUI_Comfyroll_CustomNodes
+RUN git clone https://github.com/Fannovel16/comfyui_controlnet_aux /comfyui/custom_nodes/comfyui_controlnet_aux
+RUN git clone https://github.com/sipherxyz/comfyui-art-venture /comfyui/custom_nodes/comfyui-art-venture
+RUN git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts /comfyui/custom_nodes/ComfyUI-Custom-Scripts
 
 
 # Change working directory to ComfyUI
 WORKDIR /comfyui
 
+# Install ComfyUI dependencies
+RUN pip3 install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121 \
+    && pip3 install --no-cache-dir xformers==0.0.21 \
+    && pip3 install -r requirements.txt
 
-
-# Clone custom_nodes repository
-RUN git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts /comfyui/custom_nodes/ComfyUI-Custom-Scripts
-RUN git clone --recurse-submodules   https://github.com/ssitu/ComfyUI_UltimateSDUpscale /comfyui/custom_nodes/ComfyUI_UltimateSDUpscale
-RUN git clone https://github.com/jags111/efficiency-nodes-comfyui /comfyui/custom_nodes/efficiency-nodes-comfyui
-RUN git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes /comfyui/custom_nodes/ComfyUI_Comfyroll_CustomNodes
-RUN git clone https://github.com/Fannovel16/comfyui_controlnet_aux /comfyui/custom_nodes/comfyui_controlnet_aux
-RUN git clone https://github.com/sipherxyz/comfyui-art-venture /comfyui/custom_nodes/comfyui-art-venture
-
-# mkdir folders
-RUN mkdir -p models/ipadapter models/upscale_models
+# Install runpod
+RUN pip3 install runpod requests
 
 # Download checkpoints/vae/LoRA to include in image
 RUN wget -O models/checkpoints/InteriorDesginV5ForCN.ckpt https://huggingface.co/datasets/Ultimatech/InteriorDesign/blob/main/InteriorDesginV5ForCN.ckpt
-RUN wget -O models/checkpoints/laowang_ARCH_MIX_V0.5.safetensors https://huggingface.co/datasets/Ultimatech/InteriorDesign/blob/main/laowang_ARCH_MIX_V0.5.safetensors
+RUN wget -O models/checkpoints/InteriorDesginV5ForCN.ckpt https://huggingface.co/datasets/Ultimatech/InteriorDesign/blob/main/InteriorDesginV5ForCN.ckpt
 RUN wget -O models/vae/vae-ft-mse-840000-ema-pruned.ckpt https://huggingface.co/stabilityai/sd-vae-ft-mse-original/blob/main/vae-ft-mse-840000-ema-pruned.ckpt
+RUN wget -O models/loras/xl_more_art-full_v1.safetensors https://civitai.com/api/download/models/152309
 RUN wget -O models/loras/French_Cream_Style_V1.0.safetensors https://huggingface.co/datasets/Ultimatech/InteriorDesign/blob/main/French_Cream_Style%20_V1.0.safetensors
 RUN wget -O models/loras/ModerOfficeSD1.5_v1.0.safetensors https://huggingface.co/datasets/Ultimatech/InteriorDesign/blob/main/ModerOfficeSD1.5_v1.0.safetensors
 
@@ -48,17 +56,6 @@ RUN wget -O models/upscale_models/RealESRGAN_x4.pth https://huggingface.co/ai-fo
 # Example for adding specific models into image
 # ADD models/checkpoints/sd_xl_base_1.0.safetensors models/checkpoints/
 # ADD models/vae/sdxl_vae.safetensors models/vae/
-### Check for custom nodes 'requirements.txt' files and then run install
-RUN for dir in /comfyui/custom_nodes/*/; do \
-    if [ -f "$dir/requirements.txt" ]; then \
-        pip3 install --no-cache-dir -r "$dir/requirements.txt"; \
-    fi; \
-done
-
-#add missing package
-
-RUN pip3 install segment_anything
-
 
 # Go back to the root
 WORKDIR /
